# Template_Repo_CPP

./: .gitignore  CMakeLists.txt  Makefile  Manual_cmake.md  README.md  conventions.md
include/: prueba.hpp
src/: dependencias_varias.cpp
src/apps/: prub.cpp
